Code cleanup to reduce warnings
now with a lot less warnings under VS Code
replaced old uses of newInstance()
added generics